--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Qe7cKDWRNv3z0YEvU12pnzEujI0uUDmA"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
